# Aide-Agent

./: .gitattributes  .gitignore  Aide.spec  CLAUDE.md  CONTEXT.md  LICENSE  README.md  aide  aide.ps1  install.ps1  install.sh  pyproject.toml
.claude/: review-2026-07-04.md  work.md
.github/workflows/: build.yml
.superpowers/sdd/: progress.md
core/: __init__.py  config.py  locale.py  locale_data.py  platform.py  resources.py  setup.py  storage.py
core/commands/: __init__.py
core/context/: __init__.py  compactor.py  embeddings.py  ingester.py  pipeline.py  relevance.py  token_counter.py
core/kernel/: __init__.py  agent.py  bootstrap.py  context.py  fc_loop.py  protocols.py  state.py
core/llm_gateway/: __init__.py  anthropic_provider.py  content_builder.py  image_utils.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  provider.py
core/memory/: __init__.py  capture.py  entries.py  recall.py  tracker.py  updater.py
core/plugins/: __init__.py  contract.py  host.py  sdk.py  slots.py
core/sessions/: __init__.py  manager.py  restorer.py
core/tools/: __init__.py  discovery.py  retry.py
mcp/: servers.json
scripts/: build.py  install.ps1  verify_linux.sh  verify_macos.sh
shell/: main.py  tray_daemon.py
tests/: test_aide_home.py  test_commands.py  test_compactor.py  test_compat.py  test_config.py  test_context_manager.py  test_platform.py  test_plugin_commands.py  test_prompt_benchmark.py  test_prompt_manager.py  test_setup.py  test_storage.py
tests/kernel/: test_agent.py  test_bootstrap.py  test_context.py  (+3 more)
ui/: headless.py
(+71 files in other folders)
