[project]
name = "aide"
version = "0.1.0"
description = "Aide Agent — local personal AI assistant"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pyperclip>=1.9.0",
    "ddgs>=9.14.4",
    "pygments>=2.17.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "onnxruntime>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[project.optional-dependencies]
# macOS: pystray 需要 PyObjC 桥接
macos = ["pyobjc-framework-Quartz>=10.0"]
# Linux: pystray 托盘后端（系统 GTK 包见 CLAUDE.md）
linux-tray = ["dbus-python>=1.3"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
